change in .erb file

--- a/app/views/loads/new.html.erb
+++ b/app/views/loads/new.html.erb
@@ -17,12 +17,6 @@
     </div>
     <table cellpadding="1" cellspacing="1" class="tblstyle tblstyle-load">
       <tr>
-        <td>
-        <div class="form-group">
-          <label for="from">Load Type<span>*</span></label>
-            <%= f.select :load_type, options_for_select(Load::LOAD_TYPE.map {|k| [k.humanize.capitalize]}, :selected=> params[:load].present? ? params[:load][:load_type] : ''  ), :prompt=>"Select Load Type" %>      
-        </div>
-      </td>
       <td>
         <div class="form-group ">
         <label for="from">From<span>*</span></label>
@@ -35,6 +29,13 @@
         <%= f.select 'load_to', options_for_select(country_list.collect{ |u| [u] }, :selected=> params[:load].present? ? params[:load][:load_to] : ''), :prompt=>"Destination" %>
       </div>
       </td>
+       <td>
+          <div class="form-group">
+          <label for="from">Truck body</label>
+            <%= f.select :load_body, options_for_select(Load::LOAD_BODY.map {|k,v| [k,v]}),:prompt=>"Truck body" %>
+          </div>
+        </td>
+     
     </tr>
     <tr>
         <td>   </td>
@@ -70,12 +71,13 @@
         </div>
       <%# end %>
     </td>
-    <td>
-      <div class="form-group ">
-        <label for="from">Scheduled Date <span>*</span></span></label>
-         <span> <%= f.text_field :load_schedule_date, :id=> "datepicker", :placeholder=> "Scheduled Date" %></span>
-      </div>
-    </td>
+     <td>
+        <div class="form-group">
+          <label for="from">Load Type<span>*</span></label>
+            <%= f.select :load_type, options_for_select(Load::LOAD_TYPE.map {|k| [k.humanize.capitalize]}, :selected=> params[:load].present? ? params[:load][:load_type] : ''  ), :prompt=>"Select Load Type" %>      
+        </div>
+      </td>
+    
     <td>
       <div class="form-group ">
         <label for="from">Expected Price(INR) <span>*</span></span></label>
@@ -99,6 +101,12 @@
          <%= f.text_field :destination_pin_code, class: "input control-label col-sm-4", :class=> "form-control", :placeholder=> "Delivery Address" %>
       </div>
     </td>
+     <td>
+      <div class="form-group ">
+        <label for="from">Scheduled Date <span>*</span></label>
+         <span> <%= f.text_field :load_schedule_date, :id=> "datepicker", :placeholder=> "Scheduled Date" %></span>
+      </div>
+    </td>
     <!-- <td>
       <div class="form-group ">
         <label for="from">Are you wiling to share<span>*</span></label>
@@ -112,12 +120,7 @@
              <%= f.text_area :information, class: "input control-label col-sm-4", :class=> "information-text form-control", :placeholder=> "Information" %>
           </div>
         </td>
-        <td>
-          <div class="form-group">
-          <label for="from">Truck body</label>
-            <%= f.select :load_body, options_for_select(Load::LOAD_BODY.map {|k,v| [k,v]}),:prompt=>"Truck body" %>
-          </div>
-        </td>
+       
       </tr>
     </tr>
   <tr>
