--- a/app/views/loads/new.html.erb
+++ b/app/views/loads/new.html.erb
@@ -81,7 +81,7 @@
     <td>
       <div class="form-group ">
         <label for="from">Expected Price(INR) <span>*</span></span></label>
-         <span> <%= f.text_field :expected_price, :id=> "datepicker", :placeholder=> "Expected Price" %></span>
+         <span> <%= f.text_field :expected_price, :placeholder=> "Expected Price" %></span>
       </div>
     </td>
   </tr>
@@ -104,7 +104,7 @@
      <td>
       <div class="form-group ">
         <label for="from">Scheduled Date <span>*</span></label>
-         <span> <%= f.text_field :load_schedule_date, :id=> "datepicker", :placeholder=> "Scheduled Date" %></span>
+         <span> <%= f.text_field :load_schedule_date, :id=> "datepicker",  :placeholder=> "Scheduled Date" %></span>
       </div>
     </td>
     <!-- <td>
