--- a/app/views/subscriptions/index.html.erb
+++ b/app/views/subscriptions/index.html.erb
@@ -26,8 +26,8 @@
               data-theme.color="#F37254"
           >
           </script>
-          <input type="submit" value="1000 inr per Monthly" class="razorpay-payment-button1">
-          <input type="hidden" value="100" name="product_id">
+          <input type="submit" value="1000 INR per Monthly" class="razorpay-payment-button1">
+          <input type="hidden" value="plan_9vS9eTSf8lPqRn" name="product_id">
           <input type="hidden" value="200" name="user_id">
         <% end %>
         <br>
