--- a/app/views/subscriptions/_index.html.erb
+++ b/app/views/subscriptions/_index.html.erb
@@ -3,71 +3,70 @@
       src="https://checkout.razorpay.com/v1/checkout.js"
       data-key="<%= "#{Figaro.env.MERCHANT_KEY_ID}" %>"
       data-amount= 500000
-      data-name="Sandeep"
-      data-description="Subs 5000"
+      data-name= <%= current_user.full_name  if current_user.full_name%>
+      data-description="Helf yearly subscriptions"
       data-image="/assets/3SC.png"
-      data-prefill.name="Chourey"
-      data-prefill.email="sandeep.chourey@3scsolution.com"
+      data-prefill.name=<%= current_user.first_name  if current_user.first_name %>
+      data-prefill.email=<%= current_user.email  if current_user.email %>
       data-theme.color="#F37254"
   >
   </script>
-  <input type="submit" value="5000 inr per Yearly" class="razorpay-payment-button1">
-  <input type="hidden" value="100" name="plan_id">
-  <input type="hidden" value="200" name="customer_id">
-<% end %>
+    <input type="submit" value="5000 INR half yearly" class="razorpay-payment-button-subs-monthly">
+    <input type="hidden" value="plan_9vS8mLU0lBTKg7" name="plan_id">
+    <input type="hidden" value= <%= current_user.customer_id if  current_user.customer_id.present? %> name="customer_id">
+  <% end %>
 <script>
-$(document).ready(function(){
-  var options = {
-      "key": "<%= "#{Figaro.env.MERCHANT_KEY_ID}" %>",
-      "amount": "5000",
-      "name": "Sandeep",
-      "description": "Hello",
-      "image": "/assets/3SC.png",
-      "handler": function (response){
-        var mapForm = document.createElement("form");
-        mapForm.target = "_self";
-        mapForm.method = "POST"; // or "post" if appropriate
-        mapForm.action = "/subscribe_user";
+  $(document).ready(function(){
+    var options = {
+        "key": "<%= "#{Figaro.env.MERCHANT_KEY_ID}" %>",
+        "amount": "5000",
+        "name": "Sandeep",
+        "description": "Hello",
+        "image": "/assets/3SC.png",
+        "handler": function (response){
+          var mapForm = document.createElement("form");
+          mapForm.target = "_self";
+          mapForm.method = "post"; // or "post" if appropriate
+          mapForm.action = "/subscribe_user";
 
-        var mapInput = document.createElement("input");
-        mapInput.type = "text";
-        mapInput.name = "payment_id";
-        mapInput.value = response.razorpay_payment_id;
-        mapForm.appendChild(mapInput);
+          var mapInput = document.createElement("input");
+          mapInput.type = "text";
+          mapInput.name = "payment_id";
+          mapInput.value = response.razorpay_payment_id;
+          mapForm.appendChild(mapInput);
 
-        var mapInput2 = document.createElement("input");
-        mapInput2.type = "text";
-        mapInput2.name = "user_id";
-        mapInput2.value = "10";
+          var mapInput2 = document.createElement("input");
+          mapInput2.type = "text";
+          mapInput2.name = "customer_id";
+          mapInput2.value = <%= current_user.id %>;
 
-        var mapInput3 = document.createElement("input");
-        mapInput3.type = "text";
-        mapInput3.name = "product_id";
-        mapInput3.value = "10";
+          var mapInput3 = document.createElement("input");
+          mapInput3.type = "text";
+          mapInput3.name = "product_id";
+          mapInput3.value = "plan_9pxNV2jyF7X9td";
 
-        mapForm.appendChild(mapInput);
-        mapForm.appendChild(mapInput2);
-        mapForm.appendChild(mapInput3);
+          mapForm.appendChild(mapInput);
+          mapForm.appendChild(mapInput2);
+          mapForm.appendChild(mapInput3);
 
-        mapForm.submit();
+          mapForm.submit();
 
-      },
-      "prefill": {
-          "name": "Sandeep Chourey",
-          "email": "sandeep.chourey@3scsolution.com"
-      },
-      "notes": {
-          "address": "Hello World"
-      },
-      "theme": {
-          "color": "#198F69"
-      }
-  };
-  $("#rzp-button1").click(function(e){
-    var rzp1 = new Razorpay(options);
-      rzp1.open();
-      e.preventDefault();
+        },
+        "prefill": {
+          "name": <%= current_user.full_name if current_user.full_name.present? %>,
+          "email": <%= current_user.email if current_user.email.present? %>
+        },
+        "notes": {
+            "address": "Hello World"
+        },
+        "theme": {
+            "color": "#198F69"
+        }
+    };
+    $("#rzp-button1").click(function(e){
+      var rzp1 = new Razorpay(options);
+        rzp1.open();
+        e.preventDefault();
+    });
   });
-
-});
 </script>
